--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="/images/NA MU.png">
     <link rel="stylesheet" href="./styles/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap"
-    rel="stylesheet">
+      rel="stylesheet">
   </head>
 
   <body>
@@ -41,11 +42,11 @@
                 <br>
                 МУЗЕЙ
               </h1>
-              <div class="events">
-                <div class="events__option option">
+              <div class="tickets">
+                <div class="tickets__option option">
                   <p class="option__text"> КВИТКИ</p>
                 </div>
-                <div class="events__button"></div>
+                <div class="tickets__button tickets__button--primary"></div>
               </div>
             </div>
           </aside>
@@ -54,8 +55,134 @@
       </header>
     </section>
 
-    <section>
+    <section class="main-events container">
+      <h2 class="main-events__header">Актуальні події</h2>
+
+      <div class="main-events__event event">
+
+        <div class="event__nature-image event__nature-image--first">
+
+        </div>
+
+
+
+
+        <div class="event__content content">
+          <div class="content__type type">
+            <p class="type__name">ВИСТАВКА</p>
+            <p class="type__date">26.08-29.11.2019</p>
+          </div>
+
+          <h3 class="content__header">Йду і повертаюсь</h3>
+          <p class="content__text">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво
+            другої половини 1980-1995 років.
+          </p>
+        </div>
+
+
+
+      </div>
+
+      <div class="main-events__event event">
+
+
+        <div class="event__content content">
+          <div class="content__type type">
+            <p class="type__name">ВИСТАВКА</p>
+            <p class="type__date">26.08-29.11.2019</p>
+          </div>
+
+          <h3 class="content__header">І спогади і мрії</h3>
+          <p class="content__text">
+            Національний художній музей України до 100 річчя від дня народження
+            видатної української художниці  Тетяни Яблонської
+            відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </div>
+
+        <div class="event__nature-image event__nature-image--second">
+
+        </div>
+
+      </div>
     </section>
+
+    <section class="lection">
+
+      <div class="lection__nature nature">
+
+        <div class="nature__part part">
+          <div class="part__info info">
+            <p class="info__name">ВИСТАВКА</p>
+            <p class="info__date">26.08-29.11.2019</p>
+          </div>
+
+          <h3 class="nature__header">Від класицизму до романтизму</h3>
+
+        </div>
+
+
+      </div>
+
+    </section>
+
+    <section class="galery container">
+      <h2>Галерея</h2>
+      <div class="galery__album album">
+        <div class="album__image-cell album__image-cell--1">
+          <img
+            class="album__img"
+            src="./images/Rectangle 13.5.png"
+            alt="">
+        </div>
+        <div class="album__image-cell album__image-cell--2">
+          <img
+            class="album__img"
+            src="./images/Rectangle 3.1.png"
+            alt=""
+          >
+        </div>
+        <div class="album__image-cell album__image-cell--3">
+          <img
+            class="album__img"
+            src="./images/Rectangle 13.3.png"
+            alt=""
+          >
+        </div>
+        <div class="album__image-cell album__image-cell--4">
+          <img
+            class="album__img"
+            src="./images/Rectangle 13.4.png"
+            alt=""
+          >
+        </div>
+        <!-- <img class="album__image-cell image-cell image-cell--6" src="./images/Rectangle 3.1.png" alt="">
+        <img class="album__image-cell image-cell image-cell--6" src="" alt=""> -->
+      </div>
+      <div class="tickets__button tickets__button--primary"></div>
+    </section>
+
+    <footer>
+      <section class="footer-top">
+        <div class="footer-top__subscribe subscribe">
+          <h2 class="subscribe__header">Підписка</h2>
+          <p class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <div class="subscribe__field field">
+            <input
+              class="field__email email"
+              type="text"
+              placeholder="E-mail"
+              >
+            <div class="field__button tickets__button tickets__button--secondary"></div>
+          </div>
+        </div>
+
+      </section>
+    </footer>
+
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
