--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <title>НАМУ</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
   </head>
 
   <body>
@@ -18,13 +20,20 @@
           <div class="header__menu-stripe"></div>
         </div>
         <div class="header__center">
-          <h1 class="header__name">худож<span class="header__transparent-letters">ній</span><br>музей</h1>
+          <h1 class="header__name">
+            худож<br>музей
+          </h1>
           <button class="header__button">квитки</button>
         </div>
       </div>
       <div class="header__rightside">
-        <img src="images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg" alt="Національний музей"
-        class="header__image">
+        <div class="header__logo">na<br>mu</div>
+        <span class="header__transparent-letters">ній</span>
+        <img
+          src="images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg"
+          alt="Національний музей"
+          class="header__image"
+        >
       </div>
     </header>
 
@@ -33,9 +42,6 @@
         <h2 class="event__heading">Актуальні події</h2>
         <div class="event__event1">
           <div class="event__left1">
-            <img
-            class="event__image1"
-            src="images/Rectangle 2.1.jpg" alt="Картина з колекції Градобанку">
           </div>
           <div class="event__event1-descr">
             <div class="event__event1-exhdate">
@@ -48,7 +54,9 @@
                 <div class="event__red-square"></div>
               </div>
               <p class="event__event1-text">
-                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
               </p>
             </div>
           </div>
@@ -66,22 +74,17 @@
                 <div class="event__red-square"></div>
               </div>
               <p class="event__event2-text">
-                Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </p>
             </div>
           </div>
           <div class="event__right2">
-            <img
-            class="event__image2"
-            src="images/Rectangle 4.1.jpg" alt="Картина Тетяни Яблонської">
           </div>
         </div>
 
         <div class="event__event3">
-          <img
-            class="event__image3"
-            src="images/Rectangle 20.png" alt="Картина періоду від класицизму до романтизму">
-
           <div class="event__event3-descr">
             <div class="event__event3-exhdate">
               <h4 class="event__event3-exh">лекція</h4>
@@ -90,13 +93,125 @@
             <h3 class="event__event3-name">Від класицизму до романтизму</h3>
           </div>
         </div>
+      </div>
 
+      <div class="gallery">
+        <h2 class="gallery__heading">Галерея</h2>
+        <div class="gallery__pictures">
+          <img
+            class="gallery__photo"
+            src="images/Rectangle 13.5.png"
+            alt="Картина з галереї"
+          >
+          <img
+            class="gallery__photo"
+            src="images/Rectangle 3.1.png"
+            alt="Картина з галереї"
+          >
+          <img
+            class="gallery__photo"
+            src="images/Rectangle 24.png"
+            alt="Картина з галереї"
+          >
+          <img
+            class="gallery__photo"
+            src="images/Rectangle 13.3.png"
+            alt="Картина з галереї"
+          >
+          <img
+            class="gallery__photo"
+            src="images/Rectangle 13.4.png"
+            alt="Картина з галереї"
+          >
+          <img
+            class="gallery__photo"
+            src="images/Rectangle 25.png"
+            alt="Картина з галереї"
+          >
+        </div>
+        <button class="gallery__button">></button>
+      </div>
 
-
+      <div class="subscribe">
+        <div class="subscribe__container">
+          <h2 class="subscribe__name">Підписка</h2>
+          <p class="subscribe__about">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <div class="subscribe__mail">
+            <label for="email"></label>
+            <input
+            type="email"
+            class="subscribe__input"
+            id="email"
+            name="email"
+            placeholder="E-mail">
+            <button class="subscribe__button">></button>
+          </div>
+        </div>
       </div>
     </main>
 
+    <footer class="footer">
+      <div class="footer__leftside">
+        <div class="footer__namu">
+          <span class="footer__logo">na<br>mu</span>
+          <div class="footer__icons">
+            <img src="images/Facebook.png" alt="facebook icon">
+            <img src="images/camera.png" alt="camera icon">
+          </div>
+        </div>
 
+        <div class="footer__hours">
+          <p>
+            Графік роботи<br><br><br>
+            <strong>12:00 — 20:00</strong> середа<br>
+            <strong>12:00 — 20:00</strong> четвер<br>
+            <strong>12:00 — 20:00</strong> п’ятниця<br>
+            <strong>11:00 — 19:00</strong> субота<br>
+            <strong>11:00 — 19:00</strong> неділя<br><br><br>
+            Вихідні понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+        <div class="footer__contacts">
+          <p>
+            Контакти:<br><br><br>
+            вул. М. Грушевського, 6;<br>
+            Київ, 01001<br>
+            тел. +38 (044) 278-13-57<br>
+            факс +38 (044) 278-74-54<br>
+            e-mail: info@namu.kiev.ua<br>
+          </p>
+        </div>
+      </div>
+      <div class="footer__rightside">
+        <div class="footer__menu-block">
+          <p>
+            Галерея<br><br><br>
+            Виставки та події<br><br><br>
+            Відвідування<br><br><br>
+            Стати нашим другом
+          </p>
+        </div>
+        <div class="footer__menu-block">
+          <p>
+            Про Нас<br><br><br>
+            Магазин<br><br><br>
+            Блог<br><br><br>
+            Контакти
+          </p>
+        </div>
+      </div>
+    </footer>
+    <div class="design">
+      <div class="design__copyright">
+        Copyright © 2019. All Rights Reserved.
+      </div>
+      <div class="design__author">
+        Designed by Zhyriada Marina
+      </div>
+    </div>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
