--- a/src/index.html
+++ b/src/index.html
@@ -10,69 +10,279 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;400;500;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-<!--    <header class="header">-->
-<!--    </header>-->
-
-  <main>
-    <div class="container">
-      <section class="section">
-        <div class="current-events">
-          <h2 class="title__events">Актуальні події</h2>
-          <div class="return">
-            <div class="return__img">
-              <img
-                src="images/developments/current-events1.png"
-                alt="picture"
-                class="return__img__picture"
-              >
+    <main>
+      <div class="container">
+        <section class="section">
+          <div class="current-events">
+            <h2 class="title__events title">Актуальні події</h2>
+            <div class="return">
+              <div class="return__img">
+                <img
+                  src="images/developments/current-events1.png"
+                  alt="picture"
+                  class="return__img__picture"
+                >
+              </div>
+              <div class="return__text">
+                <h5 class="exhibition-day data">ВИСТАВКА
+                  <span class="exhibition-day__span">
+                    26.08-29.11.2019
+                  </span>
+                </h5>
+                <div class="name">
+                  <h3 class="name__picture denomination">Йду і повертаюсь</h3>
+                  <div class="name__picture__rectangle"></div>
+                </div>
+                <p class="text-picture">
+                  Національний Художній Музей України презентує
+                  унікальну частину колекції Градобанку -
+                  <br>
+                  українське мистецтво другої половини<br>
+                  1980-1995 років.
+                </p>
+              </div>
             </div>
-            <div class="return__text">
-              <h5 class="exhibition-day">ВИСТАВКА
+
+            <div class="dreams">
+              <div class="dreams__text">
+                <h5 class="exhibition-day data">ВИСТАВКА
+                  <span class="exhibition-day__span">
+                   26.08-29.11.2019
+                  </span>
+                </h5>
+                <div class="name">
+                  <h3 class="name__picture  denomination">І спогади і мрії</h3>
+                  <div class="name__picture__rectangle"></div>
+                </div>
+                <p class="text-picture">
+                  Національний художній музей України до 100
+                  річчя від дня народження   видатної української
+                  художниці  Тетяни Яблонської  відкриває
+                  ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+              <div class="dreams__img">
+                <img
+                  src="images/developments/current-events2.png"
+                  alt="picture"
+                  class="dreams__img__picture"
+                >
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <section class="section">
+        <div class="insert">
+          <div class="insert__transition">
+            <img
+              src="images/developments/current-events3.png"
+              class="insert__transition__picture"
+              alt="picture"
+            >
+            <div class="insert__transition__text">
+              <div class="lecture">
+                <h5 class="exhibition-day">ЛЕКЦІЯ</h5>
                 <span class="exhibition-day__span">
                   26.08-29.11.2019
                 </span>
-              </h5>
-              <div class="name">
-                <h3 class="name__picture">Йду і повертаюсь</h3>
-                <div class="name__picture__rectangle"></div>
               </div>
-              <p class="text-picture">Національний Художній Музей України презентує
-                унікальну частину колекції Градобанку -<br>
-                українське мистецтво другої половини<br>
-                1980-1995 років.
-              </p>
+              <h3 class="name__picture">Від класицизму до романтизму</h3>
             </div>
           </div>
-
-          <div class="dreams">
-            <div class="dreams__text">
-              <h5 class="exhibition-day">ВИСТАВКА
-                <span class="exhibition-day__span">
-                26.08-29.11.2019
-              </span>
-              </h5>
-              <div class="name">
-                <h3 class="name__picture">І спогади і мрії</h3>
-                <div class="name__picture__rectangle"></div>
-              </div>
-              <p class="text-picture">
-                Національний художній музей України до 100
-                річчя від дня народження   видатної української
-                художниці  Тетяни Яблонської  відкриває
-                ретроспективну ювілейну виставку «І спогади і мрії».
-              </p>
-            </div>
-            <div class="dreams__img">
-              <img
-                src="images/developments/current-events2.png"
-                alt="picture"
-                class="dreams__img__picture"
-              >
-            </div>
         </div>
       </section>
-    </div>
-  </main>
+
+      <div class="container">
+        <section class="section">
+          <div class="gallery">
+            <h2 class="title__events title">Галерея</h2>
+            <div class="gallery__picture">
+              <div class="gallery__picture__important">
+                <img
+                  src="images/gallery/1.png"
+                  alt=""
+                  class="important__img"
+                >
+                <img
+                  src="images/gallery/2.png"
+                  alt=""
+                  class="important__img"
+                >
+                <img
+                  src="images/gallery/3.png"
+                  alt=""
+                  class="important__img"
+                >
+              </div>
+
+              <div class="gallery__picture__secondary">
+                <img
+                  src="images/gallery/4.png"
+                  alt=""
+                  class="secondary__img"
+                >
+                <img
+                  src="images/gallery/5.png"
+                  alt=""
+                  class="secondary__img"
+                >
+                <img
+                  src="images/gallery/6.png"
+                  alt=""
+                  class="secondary__img"
+                >
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <section class="section">
+        <div class="subscription">
+          <img
+            src="images/footer.png"
+            alt=""
+            class="subscription__picture"
+          >
+
+          <div class="subscription__text">
+            <h2 class="title__events subscription__title">Підписка</h2>
+            <p class="subscription__paragraph">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form class="subscription__form">
+              <label for="email">
+                <input
+                  id="email"
+                  class="subscription__input"
+                  type="email"
+                  placeholder="Email"
+                >
+              </label>
+              <button class="subscription__button">
+                <img
+                  src="images/button.svg"
+                  alt="button"
+                  class="subscription__button__img"
+                >
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__info">
+          <div class="icons">
+            <h2 class="namu">
+              NA<br>MU
+            </h2>
+            <img
+              src="images/facebook.svg"
+              alt="icon facebook"
+              class="icons__img"
+            >
+            <img
+              src="images/insta.svg"
+              alt="icon instagram"
+              class="icons__img"
+            >
+          </div>
+
+          <div class="schedule">
+            <h3 class="schedule__work">
+              Графік роботи
+            </h3>
+            <p class="schedule__time">
+              <strong>12:00 — 20:00</strong> середа<br>
+              <strong>12:00 — 20:00</strong> четвер<br>
+              <strong>12:00 — 20:00</strong> п’ятниця<br>
+              <strong>11:00 — 19:00</strong> субота<br>
+              <strong>11:00 — 19:00</strong> неділя<br>
+              <br>
+              Вихідні понеділок,<br> вівторок<br>
+              Каса припиняє роботу<br> за 1 годину<br>
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="contacts">
+            <h3 class="contacts__title">
+              Контакти:
+            </h3>
+
+            <a href="" class="contacts__address">
+              вул. М. Грушевського, 6; Київ, 01001<br>
+            </a>
+
+            <a href="" class="contacts__address">
+              тел. +38 (044) 278-13-57<br> факс +38 (044) 278-74-54<br>
+            </a>
+
+            <a href="" class="contacts__address">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+
+          <div class="footer__line"></div>
+
+          <nav class="footer__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Відвідування
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Стати нашим другом
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <nav class="footer__nav-about">
+            <ul class="nav__contacts">
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Магазин
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Блог
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
