--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
     >
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700;800&family=Oswald&display=swap" rel="stylesheet">
-    <link rel="icon" href="./images/NA MU.png">
     <link rel="stylesheet" href="./styles/main.scss">
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
@@ -77,6 +76,61 @@
         <div class="main__image"></div>
       </section>
 
+      <div class="container">
+        <section class="events">
+          <span class="events__inscription">події</span>
+          <h2 class="events__paragraph" id="events">Актуальні події</h2>
+
+          <div class="events__item">
+            <img src="./images/event-1.png"
+              alt="landscape"
+              class="events__picture"
+            >
+            <div class="events__description description">
+              <div class="description__main">
+                <span class="description__info">виставка</span>
+                <span class="description__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="description__title">Йду і повертаюсь</h3>
+              <p class="description__text">
+                Національний Художній Музей України презентує унікальну
+                частину колекції Градобанку - українське мистецтво другої
+                половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div class="events__item events__item--reverse">
+            <img src="./images/event-2.png"
+            alt="girl with peacock"
+            class="events__picture"
+            >
+            <div class="events__description description events__description--rev">
+              <div class="description__main">
+                <span class="description__info">виставка</span>
+                <span class="description__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="description__title">І спогади і мрії</h3>
+              <p class="description__text">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
+      <!-- lecture -->
+      <section class="lecture">
+        <div class="lecture__background">
+          <div class="lecture__item">
+            <div class="lecture__head">
+              <div class="lecture__info">ЛЕКЦІЯ</div>
+              <div class="lecture__time">26/08/2019 - 11:00</div>
+            </div>
+            <h3 class="lecture__text">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
       <selection class="subscription container__subscription">
         <div class="subscription__wrapper">
           <h2 class="subscription__title" id="subscription">Підписка</h2>
