--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
         <a href="#Home" class="burger-menu__link">На головну</a>
       </li>
       <li class="burger-menu__item">
-        <a href="#Actual" class="burger-menu__link">Актуальні події</a>
+        <a href="#Events" class="burger-menu__link">Актуальні події</a>
+      </li>
+      <li class="burger-menu__item">
+        <a href="#Lection" class="burger-menu__link">Лекції</a>
       </li>
       <li class="burger-menu__item">
         <a href="#Gallery" class="burger-menu__link">Галерея</a>
@@ -27,12 +30,16 @@
         <a href="#Subscribe" class="burger-menu__link">Підписка</a>
       </li>
       <li class="burger-menu__item">
+        <a href="#Shedule" class="burger-menu__link">Графік роботи</a>
+      </li>
+      <li class="burger-menu__item">
         <a href="#Contact" class="burger-menu__link">Контакти</a>
       </li>
       <li class="burger-menu__item">
         <a href="tel:+38 (044) 278-13-57" class="burger-menu__link">+38 (044) 278-13-57</a>
       </li>
     </ul>
+
 
     <header class="header" id="Home">
       <div class="header__container">
@@ -53,90 +60,97 @@
     </header>
 
     <main class="main">
-      <h1 class="main__title">
-        ХУДОЖНІЙ МУЗЕЙ
-      </h1>
+      <div class="main__container">
+        <h1 class="main__title">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
 
-      <div class="main__button">
-        <div class="main__button-name">
-          Квитки
-        </div>
-        <a
-          href="http://old.namu.kiev.ua/ua/educational-programs/prices.html"
-          target="blank"
-          rel="noopener"
-        >
-          <div class="main__button-buy">
-            >
+        <div class="main__button">
+          <div class="main__button-name">
+            Квитки
           </div>
-        </a>
-      </div>
-
-      <div class="events">
-
-        <h2 class="events__title">
-          Актуальні події
-        </h2>
-        <div class="events__card">
           <a
-            href="https://lh3.googleusercontent.com/proxy/9HkY6KkJaeM519vimgl5xoEC3JFp7P87sn7Sh-aa3X6EplHP7sBYi9CFNHMPjUMKH15CdM4Oi_eqdnUZKwivsPLZAgIE8r3Rc2xXTPQdSFMkhB4l"
+            href="http://old.namu.kiev.ua/ua/educational-programs/prices.html"
             target="blank"
             rel="noopener"
           >
-            <img
-            src="./images/events-photo-1.png"
-            alt="landscape with trees and sea"
-            class="events__card-photo"
-            >
+            <div class="main__button-buy">
+              >
+            </div>
           </a>
-          <div class="events__card-info">
-            <div class="events__card-info-type">
-              Виставка
-            </div>
-            <div class="events__card-info-date">
-              26.08-29.11.2019
-            </div>
-          </div>
-          <div class="events__card-title">
-            Йду і повертаюсь
-          </div>
-          <div class="events__card-description">
-            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-          </div>
         </div>
-
-        <div class="events__card">
-          <a
-            href="https://i.pinimg.com/200x150/2d/db/d5/2ddbd55a5c523aa63a12f376644a3860.jpg"
-            target="blank"
-            rel="noopener"
-          >
-            <img
-            src="./images/events-photo-2.png"
-            alt="women sitting near the Peacock"
-            class="events__card-photo"
-            >
-          </a>
-
-          <div class="events__card-info">
-            <div class="events__card-info-type">
-              Виставка
-            </div>
-            <div class="events__card-info-date">
-              26.08-29.11.2019
-            </div>
-          </div>
-          <div class="events__card-title">
-            І спогади і мрії
-          </div>
-          <div class="events__card-description">
-            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-          </div>
-        </div>
-
       </div>
 
-      <div class="lection">
+      <div class="main__container">
+        <div class="events" id="Events">
+
+          <h2 class="events__title">
+            Актуальні події
+          </h2>
+          <div class="events__card">
+            <a
+              href="https://lh3.googleusercontent.com/proxy/9HkY6KkJaeM519vimgl5xoEC3JFp7P87sn7Sh-aa3X6EplHP7sBYi9CFNHMPjUMKH15CdM4Oi_eqdnUZKwivsPLZAgIE8r3Rc2xXTPQdSFMkhB4l"
+              target="blank"
+              rel="noopener"
+            >
+              <img
+                src="./images/events-photo-1.png"
+                alt="landscape with trees and sea"
+                class="events__card-photo"
+              >
+            </a>
+            <div class="events__card-info">
+              <div class="events__card-info-type">
+                Виставка
+              </div>
+              <div class="events__card-info-date">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <div class="events__card-title">
+              Йду і повертаюсь
+            </div>
+            <div class="events__card-description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво
+              другої половини 1980-1995 років.
+            </div>
+          </div>
+
+          <div class="events__card">
+            <a
+              href="https://i.pinimg.com/200x150/2d/db/d5/2ddbd55a5c523aa63a12f376644a3860.jpg"
+              target="blank"
+              rel="noopener"
+            >
+              <img
+                src="./images/events-photo-2.png"
+                alt="women sitting near the Peacock"
+                class="events__card-photo"
+              >
+            </a>
+
+            <div class="events__card-info">
+              <div class="events__card-info-type">
+                Виставка
+              </div>
+              <div class="events__card-info-date">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <div class="events__card-title">
+              І спогади і мрії
+            </div>
+            <div class="events__card-description">
+              Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни
+              Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+
+      <div class="lection" id="Lection">
         <div class="lection__container">
           <div class="lection__container-block">
             <span class="lection__container-block-type">
@@ -152,23 +166,123 @@
         </div>
       </div>
 
-      <footer class="footer">
+      <div class="main__container">
 
-        <div class="footer__bottom">
-          <span class="footer__bottom-text">
-            Copyright © 2019. All Rights Reserved.
-          </span>
-          <span class="footer__bottom-text">
-            Designed by Zhyriada Marina
-          </span>
+        <div class="gallery" id="Gallery">
+          <h3 class="gallery__title">
+            Галерея
+          </h3>
+
+          <div class="gallery__slider">
+            <input
+              checked type="radio"
+              name="slider"
+              id="switch1"
+            >
+            <input
+              type="radio"
+              name="slider"
+              id="switch2"
+            >
+            <input
+              type="radio"
+              name="slider"
+              id="switch3"
+            >
+            <input
+              type="radio"
+              name="slider"
+              id="switch4"
+            >
+            <div class="gallery__slides">
+              <div class="gallery__overflow">
+                <div class="gallery__slides-images">
+                  <article>
+                    <img
+                      src="./images/gallery-pic-5.png"
+                      class="gallery__slides-images-pic"
+                      alt="women"
+                    >
+                  </article>
+                  <article>
+                    <img
+                      src="./images/gallery-pic-2.png"
+                      class="gallery__slides-images-pic"
+                      alt="winter"
+                    >
+                  </article>
+                  <article>
+                    <img
+                      src="./images/gallery-pic-1.png"
+                      class="gallery__slides-images-pic"
+                      alt="people"
+                    >
+                  </article>
+                  <article>
+                    <img
+                      src="./images/gallery-pic-4.png"
+                      class="gallery__slides-images-pic"
+                      alt="art"
+                    >
+                  </article>
+                </div>
+              </div>
+            </div>
+
+            <div class="gallery__slider-active">
+              <label for="switch1"></label>
+              <label for="switch2"></label>
+              <label for="switch3"></label>
+              <label for="switch4"></label>
+            </div>
+          </div>
         </div>
-      </footer>
+
+      </div>
+
+      <div class="subscribe" id="Subscribe">
+        <h3 class="subscribe__title">
+          Підписка
+        </h3>
+        <p class="subscribe__description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form
+          class="subscribe__form"
+          action="#"
+          method="POST"
+        >
+          <input
+            type="email"
+            name="email"
+            class="subscribe__form-email"
+            placeholder="Email"
+            required
+          >
+          <a href="#">
+            <input
+              type="submit"
+              class="subscribe__form-button"
+              value=">"
+            >
+            </input>
+          </a>
+        </form>
+      </div>
 
     </main>
 
+    <footer class="footer">
 
-
-
+      <div class="footer__bottom">
+        <span class="footer__bottom-text">
+          Copyright © 2019. All Rights Reserved.
+        </span>
+        <span class="footer__bottom-text">
+          Designed by Zhyriada Marina
+        </span>
+      </div>
+    </footer>
 
 
 
